--- a/app/src/main/res/layout/fragment_loop_versus.xml
+++ b/app/src/main/res/layout/fragment_loop_versus.xml
@@ -7,32 +7,113 @@
     android:layout_height="match_parent"
     tools:context=".LoopVersusFragment">
 
+    <TextView
+        android:id="@+id/progress"
+        style="@style/TextAppearance.Material3.TitleLarge"
+        android:layout_width="230dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_rectangle_from_left"
+        android:gravity="center_vertical|end"
+        android:paddingEnd="20dp"
+        android:text="Progress: 5 / 26"
+        android:textColor="@color/design_default_color_on_primary"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:id="@+id/timer"
+        android:layout_width="140dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/rounded_rectangle_from_right">
+        <ImageView
+            android:id="@+id/timer_icon"
+            android:layout_width="24dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/hourglass"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="20dp"
+            />
+        <TextView
+            android:id="@+id/timer_time"
+            style="@style/TextAppearance.Material3.TitleLarge"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/rounded_rectangle_from_right"
+            android:gravity="center_vertical|start"
+            android:layout_marginStart="10dp"
+            android:text="0:30"
+            android:textColor="@color/design_default_color_on_primary"
+             />
+    </LinearLayout>
+    
+    <ImageView
+        android:layout_width="326dp"
+        android:layout_height="326dp"
+        app:layout_constraintTop_toBottomOf="@id/timer"
+        app:layout_constraintBottom_toBottomOf="@id/score_title"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:src="@drawable/plate_74_ish"/>
+    
+    <TextView
+        android:id="@+id/score_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/answer_divider"
+        android:layout_marginBottom="15dp"
+        android:text="@string/question"
+        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"/>
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/answer_divider"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/answer_1"
+        android:layout_marginBottom="30dp"
+        app:dividerInsetStart="40dp"
+        app:dividerInsetEnd="40dp"
+        />
     <Button
         android:id="@+id/answer_1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@id/answer_2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="10dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginEnd="100dp"
         android:text="Answer 1" />
     <Button
         android:id="@+id/answer_2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@id/answer_3"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="10dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginEnd="100dp"
         android:text="Answer 2" />
     <Button
         android:id="@+id/answer_3"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="20dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginEnd="100dp"
         android:text="Answer 3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
