--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,6 +25,11 @@
         <action
             android:id="@+id/action_loopTestFragment_to_resultsTestFragment"
             app:destination="@id/resultsTestFragment" />
+        <action
+            android:id="@+id/action_loopTestFragment_to_chooseModeFragment"
+            app:destination="@id/chooseModeFragment"
+            app:popUpTo="@id/chooseModeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/loopVersusFragment"
@@ -34,6 +39,11 @@
         <action
             android:id="@+id/action_loopVersusFragment_to_resultsVersusFragment"
             app:destination="@id/resultsVersusFragment" />
+        <action
+            android:id="@+id/action_loopVersusFragment_to_chooseModeFragment"
+            app:destination="@id/chooseModeFragment"
+            app:popUpTo="@id/chooseModeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/resultsTestFragment"
@@ -42,7 +52,9 @@
         tools:layout="@layout/fragment_results_test" >
         <action
             android:id="@+id/action_resultsTestFragment_to_chooseModeFragment"
-            app:destination="@id/chooseModeFragment" />
+            app:destination="@id/chooseModeFragment"
+            app:popUpTo="@id/chooseModeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/resultsVersusFragment"
@@ -54,7 +66,9 @@
             app:destination="@id/leaderboardFragment" />
         <action
             android:id="@+id/action_resultsVersusFragment_to_chooseModeFragment"
-            app:destination="@id/chooseModeFragment" />
+            app:destination="@id/chooseModeFragment"
+            app:popUpTo="@id/chooseModeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/leaderboardFragment"
@@ -63,6 +77,8 @@
         tools:layout="@layout/fragment_leaderboard" >
         <action
             android:id="@+id/action_leaderboardFragment_to_chooseModeFragment"
-            app:destination="@id/chooseModeFragment" />
+            app:destination="@id/chooseModeFragment"
+            app:popUpTo="@id/chooseModeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
