--- a/app/src/main/res/layout/fragment_loop_test.xml
+++ b/app/src/main/res/layout/fragment_loop_test.xml
@@ -21,6 +21,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
     <ImageView
+        android:id="@+id/plate_image"
         android:layout_width="326dp"
         android:layout_height="326dp"
         app:layout_constraintTop_toBottomOf="@id/progress"
