--- a/app/src/main/res/layout/fragment_loop_versus.xml
+++ b/app/src/main/res/layout/fragment_loop_versus.xml
@@ -52,6 +52,7 @@
     </LinearLayout>
     
     <ImageView
+        android:id="@+id/plate_image"
         android:layout_width="326dp"
         android:layout_height="326dp"
         app:layout_constraintTop_toBottomOf="@id/timer"
