--- a/app/src/main/res/layout/fragment_loop_versus.xml
+++ b/app/src/main/res/layout/fragment_loop_versus.xml
@@ -60,7 +60,7 @@
         android:layout_marginBottom="40dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:src="@drawable/plate_74_ish"/>
+        android:src="@drawable/plate_21"/>
     
     <TextView
         android:id="@+id/score_title"
