Fixed leaderboard display from network

--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -43,6 +43,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/score_divider"
+            app:listData="@{viewModel.scores}"
             android:layout_marginTop="20dp"/>
 
         <TextView
