--- a/app/src/main/res/layout/leaderboard_item.xml
+++ b/app/src/main/res/layout/leaderboard_item.xml
@@ -6,6 +6,9 @@
         <variable
             name="viewModel"
             type="com.pl.agh.bator.ishihara_test.IshiharaViewModel" />
+        <variable
+            name="item"
+            type="com.pl.agh.bator.ishihara_test.network.LeaderboardScore" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="@{viewModel.scores.toString()}"
+        android:text="@{item.name}"
         style="@style/TextAppearance.Material3.BodyLarge"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="40dp"/>
@@ -28,7 +31,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         style="@style/TextAppearance.Material3.BodyLarge"
-        android:text="120.0"
+        android:text="@{item.scoreString}"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginEnd="40dp"/>
 
