--- a/app/src/main/res/layout/fragment_loop_test.xml
+++ b/app/src/main/res/layout/fragment_loop_test.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+<data>
+    <variable
+        name="viewModel"
+        type="com.pl.agh.bator.ishihara_test.IshiharaViewModel" />
+</data>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -16,7 +22,7 @@
         android:background="@drawable/rounded_rectangle_from_left"
         android:gravity="center_vertical|end"
         android:paddingEnd="20dp"
-        android:text="Progress: 5 / 26"
+        android:text="@{@string/progress(viewModel.currentAnswerCount, viewModel.MAX_NO_OF_PLATES)}"
         android:textColor="@color/design_default_color_on_primary"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -86,3 +92,4 @@
         android:layout_marginEnd="100dp"
         android:text="Answer 3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
