--- a/app/src/main/res/layout/fragment_loop_versus.xml
+++ b/app/src/main/res/layout/fragment_loop_versus.xml
@@ -2,8 +2,8 @@
 <layout>
     <data>
         <variable
-            name="answerOneListener"
-            type="com.pl.agh.bator.ishihara_test.LoopVersusFragment" />
+            name="viewModel"
+            type="com.pl.agh.bator.ishihara_test.IshiharaViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,7 +23,7 @@
             android:background="@drawable/rounded_rectangle_from_left"
             android:gravity="center_vertical|end"
             android:paddingEnd="20dp"
-            android:text="Progress: 5 / 26"
+            android:text="@{@string/progress(viewModel.currentAnswerCount, viewModel.MAX_NO_OF_PLATES)}"
             android:textColor="@color/design_default_color_on_primary"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
